# ODP-EL-textX

./: CHANGELOG.md  LICENSE  README.md  runtests.sh  setup.cfg  setup.py
examples/: library.odpl
odpel/: odpel.tx
