[metadata]
name = ODP-EL-textX
author = Igor Dejanović & Zoran Milošević
author_email = igor.dejanovic@gmail.com
license = MIT
description = ODP-EL in textX
keywords = textX
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    textX
include_package_data = True
package_dir =
    odpel = odpel

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.package_data]
    odpel = *.tx

[options.entry_points]
textx_languages =
    odpel = odpel:odpel_language

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90
